Fixed z-index of floating button container

--- a/src/main/resources/assets/style/main.scss
+++ b/src/main/resources/assets/style/main.scss
@@ -125,6 +125,7 @@ main {
     position: fixed;
     bottom: 32px;
     right: 32px;
+    z-index: 1030;
 }
 
 .floating-button {
